--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "neela-todo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:app": "pnpm --filter todo build",
+    "deploy:app": "pnpm --filter todo deploy-app",
+    "dev:app": "pnpm --filter todo dev"
   },
   "keywords": [],
   "author": "",
