--- a/apps/todo/package.json
+++ b/apps/todo/package.json
@@ -1,59 +1,44 @@
 {
   "name": "todo",
   "private": true,
-  "sideEffects": false,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "deploy-app": "wrangler deploy",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "wrangler dev",
-    "typecheck": "tsc",
-    "typegen": "wrangler types"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@remix-run/cloudflare": "^2.15.0",
-    "@remix-run/react": "^2.15.0",
-    "@remix-run/server-runtime": "^2.15.0",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "framer-motion": "^11.13.5",
-    "isbot": "^4.1.0",
     "lucide-react": "^0.462.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-rewards": "^2.0.4",
-    "sonner": "^1.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "cmdk": "^1.0.0",
+    "framer-motion": "^11.13.5",
+    "react-rewards": "^2.0.4",
+    "sonner": "^1.7.0",
     "tinybase": "^5.4.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241022.0",
-    "@remix-run/dev": "^2.15.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "3.84.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
   }
 }
