--- a/apps/todo/tsconfig.json
+++ b/apps/todo/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": [
-      "vite/client"
+      "vite/client",
+      "node"
     ],
     "isolatedModules": true,
     "esModuleInterop": true,
