--- a/apps/todo/package.json
+++ b/apps/todo/package.json
@@ -30,7 +30,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -40,7 +40,6 @@
     "tailwindcss": "^3.4.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^6.0.3"
   }
 }
